--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "lint": "eslint .",
     "typecheck": "tsc",
-    "prettier": "prettier --write .",
-    "format": "prettier -w . --cache"
+    "format": "prettier --write --cache ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.11",
