--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "expect-type": "^0.16.0",
     "prettier": "^2.8.8",
     "typescript": "5.0.4"
+  },
+  "dependencies": {
+    "ts-expect": "^1.3.0"
   }
 }
